--- a/index.css
+++ b/index.css
@@ -7,31 +7,38 @@ body{
     align-items: center;
     border-radius: 20px;
     font-family: "Outfit";
-    position: relative;
+    height: 100vh;
+    margin: 0;
 }
 .box{
-    margin-top: 100px;
-    background-color: aliceblue;
-    height: 530px;
-    width: 345px;
-    border-radius: 20px;
-    box-shadow: 0 1px 0.5px 0 rgba(0, 0, 0, 0.2);
+    background-color:hsl(0,0%,100%);
+    max-width: 20%;
+    text-align: center;
+    padding: 5px;
+    border-radius: 15px;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
 }
 img{
     border-radius: 20px;
-    margin-top: 21px;
-    margin-left: 18px;  
+    margin-bottom: 0px;
+    margin-top: 10px;
+    width: 93%;
+
 }
 .heading {
-    font-weight: bold;
-    font-size: 22px;
+     color: hsl(218, 44%, 22%);
+    font-weight:700;
+    margin: 20px 20px 10px 20px;
+    padding:0px 20px;
+    font-size: 18px;
     text-align: center;
 }
 .subtext {
-    font-size: 15px;
+    font-size: 14px;
     text-align: center;
-    line-height: 20px;
-    color: hsl(220, 1%, 46%);
+    line-height: 1.5;
+    color: hsl(220, 15%, 55%);
+    padding: 10px;
 }
 @media (max-width:380px){
     .box{
